--- a/templates/post-alpine.template
+++ b/templates/post-alpine.template
@@ -1,8 +1,5 @@
-# Copy the S2I scripts from the specific language image to $STI_SCRIPTS_PATH
-COPY ./s2i/bin/ $STI_SCRIPTS_PATH
-
-# Each language image can have 'contrib' a directory with extra files needed to
-# run and build the applications.
+# Each container image can have 'contrib' a directory with extra files needed to
+# run and build the application.
 COPY ./contrib/ /opt/app-root
 
 # Directory with the sources is set as the working directory so all STI scripts
