--- a/templates/pre-alpine.template
+++ b/templates/pre-alpine.template
@@ -1,18 +1,10 @@
 FROM %NAME%:%VERSION%-alpine
 MAINTAINER AusNimbus <support@ausnimbus.com.au>
 
-EXPOSE 8080
-
-ENV STI_SCRIPTS_PATH=/usr/libexec/s2i \
-    HOME=/opt/app-root/src
-
-LABEL summary="Platform for building and running %DISPLAY_NAME% %VERSION% applications" \
+LABEL summary="Platform for running %DISPLAY_NAME% %VERSION% applications" \
     maintainer="AusNimbus <support@ausnimbus.com.au>" \
-    io.k8s.description="Platform for building and running %DISPLAY_NAME% %VERSION% applications" \
+    io.k8s.description="Platform for running %DISPLAY_NAME% %VERSION% applications" \
     io.k8s.display-name="%DISPLAY_NAME% %VERSION%" \
-    io.openshift.expose-services="8080:http" \
-    io.openshift.tags="builder,%NAME%" \
-    io.openshift.s2i.scripts-url=image:///usr/libexec/s2i
 
 RUN apk --no-cache add bash rsync git && rm -rf /var/cache/apk/* && \
     mkdir -p ${HOME}/.pki/nssdb && \
