Switch case the templates

--- a/templates/pre-alpine.template
+++ b/templates/pre-alpine.template
@@ -2,9 +2,11 @@ FROM %NAME%:%VERSION%-alpine
 MAINTAINER AusNimbus <support@ausnimbus.com.au>
 
 LABEL summary="Platform for running %DISPLAY_NAME% %VERSION% applications" \
-    maintainer="AusNimbus <support@ausnimbus.com.au>" \
-    io.k8s.description="Platform for running %DISPLAY_NAME% %VERSION% applications" \
-    io.k8s.display-name="%DISPLAY_NAME% %VERSION%" \
+      maintainer="AusNimbus <support@ausnimbus.com.au>" \
+      io.k8s.description="Platform for running %DISPLAY_NAME% %VERSION% applications" \
+      io.k8s.display-name="%DISPLAY_NAME% %VERSION%"
+
+ENV HOME=/opt/app-root/src
 
 RUN apk --no-cache add bash rsync git && rm -rf /var/cache/apk/* && \
     mkdir -p ${HOME}/.pki/nssdb && \
