--- a/templates/s2i-alpine.template
+++ b/templates/s2i-alpine.template
@@ -1,7 +1,6 @@
 EXPOSE 8080
 
-ENV STI_SCRIPTS_PATH=/usr/libexec/s2i \
-    HOME=/opt/app-root/src
+ENV STI_SCRIPTS_PATH=/usr/libexec/s2i
 
 LABEL io.openshift.expose-services="8080:http" \
     io.openshift.tags="builder,%NAME%" \
