--- a/templates/s2i-alpine.template
+++ b/templates/s2i-alpine.template
@@ -8,3 +8,5 @@ LABEL io.openshift.expose-services="8080:http" \
 
 # Copy the S2I scripts from the specific language image to $STI_SCRIPTS_PATH
 COPY ./s2i/bin/ $STI_SCRIPTS_PATH
+
+CMD /usr/bin/base-usage
