Move WORKDIR into S2I

--- a/templates/component-alpine.template
+++ b/templates/component-alpine.template
@@ -1,2 +1,2 @@
-# Copy the component scripts
+# Copy the component scripts (override existing container-entrypoint)
 COPY ./component/bin/ /usr/bin/
