--- a/templates/post-alpine.template
+++ b/templates/post-alpine.template
@@ -1,5 +1,5 @@
-# Drop the root user and make the content of /opt/app-root owned by user 1001
-RUN chown -R 1001:0 /opt/app-root && chmod -R ug+rwx /opt/app-root
-USER 1001
+# Drop the root user and make the content of /opt/app-root owned by user default
+RUN chown -R default:0 /opt/app-root && chmod -R ug+rwx /opt/app-root
+USER default
 
 ENTRYPOINT ["container-entrypoint"]
