Standardize on user 100

--- a/templates/post-alpine.template
+++ b/templates/post-alpine.template
@@ -1,5 +1,10 @@
+# Standardize on UID 100 (alpine:3.4 does not have the shadow package)
+RUN apk add shadow --no-cache --repository http://rsync.alpinelinux.org/alpine/latest-stable/community/ && \
+    usermod -o -u 100 default && \
+    apk del shadow
+
 # Drop the root user and make the content of /opt/app-root owned by user default
-RUN chown -R default:0 /opt/app-root && chmod -R ug+rwx /opt/app-root
-USER default
+RUN chown -R 100:0 /opt/app-root && chmod -R ug+rwx /opt/app-root
+USER 100
 
 ENTRYPOINT ["container-entrypoint"]
