--- a/templates/pre-alpine.template
+++ b/templates/pre-alpine.template
@@ -7,7 +7,7 @@ LABEL summary="Platform for running %DISPLAY_NAME% %VERSION% applications" \
 
 ENV HOME=/opt/app-root/src
 
-RUN apk --no-cache add bash rsync && rm -rf /var/cache/apk/* && \
+RUN apk --no-cache add bash rsync && \
     mkdir -p ${HOME}/.pki/nssdb && \
     chown -R 1001:0 ${HOME}/.pki && \
     adduser -S -u 1001 -G root -h ${HOME} -s /sbin/nologin \
