Use bash instead of nc

--- a/templates/jenkins/component-test.template
+++ b/templates/jenkins/component-test.template
@@ -22,5 +22,5 @@ openshift.withCluster() {
 
         sleep 60
         echo "Testing endpoint ${testAppHost}:${testAppPort}"
-        sh "nc -z $testAppHost $testAppPort"
+        sh ": </dev/tcp/$testAppHost/$testAppPort"
 }
