--- a/templates/jenkins/s2i-build.template
+++ b/templates/jenkins/s2i-build.template
@@ -56,6 +56,11 @@ openshift.withCluster() {
                                                 ]
                                         ],
                                         "runPolicy" : "Serial",
+                                        "resources" : [
+                                            "limits" : [
+                                                "memory" : "2Gi"
+                                            ]
+                                        ],
                                         "source" : [
                                                 "git" : [
                                                         "uri" : "https://github.com/ausnimbus/%REPO%"
