--- a/templates/docker/alpine/post.template
+++ b/templates/docker/alpine/post.template
@@ -1,10 +1,10 @@
-# Standardize on UID 100 (alpine:3.4 does not have the shadow package)
+# Standardize on UID $USER (alpine:3.4 does not have the shadow package)
 RUN apk add shadow --no-cache --repository http://rsync.alpinelinux.org/alpine/latest-stable/community/ && \
-    usermod -o -u 100 default && \
+    usermod -o -u $USER default && \
     apk del shadow
 
 # Drop the root user and make the content of /opt/app-root owned by user default
-RUN chown -R 100:0 /opt/app-root && chmod -R ug+rwx /opt/app-root
-USER 100
+RUN chown -R $USER:0 /opt/app-root && chmod -R ug+rwx /opt/app-root
+USER $USER
 
 ENTRYPOINT ["container-entrypoint"]
