--- a/templates/docker/post.template
+++ b/templates/docker/post.template
@@ -1,8 +1,8 @@
-# Standardize on UID 999
-RUN usermod -o -u 999 default
+# Standardize on UID $USER
+RUN usermod -o -u $USER default
 
 # Drop the root user and make the content of /opt/app-root owned by user default
-RUN chown -R 999:0 /opt/app-root && chmod -R ug+rwx /opt/app-root
-USER 999
+RUN chown -R $USER:0 /opt/app-root && chmod -R ug+rwx /opt/app-root
+USER $USER
 
 ENTRYPOINT ["container-entrypoint"]
