--- a/templates/jenkins/s2i-build.template
+++ b/templates/jenkins/s2i-build.template
@@ -69,7 +69,7 @@ openshift.withCluster() {
                                         ],
                                         "strategy" : [
                                                 "dockerStrategy" : [
-                                                        "dockerfilePath" : "versions/${versions[i]}/${variant[v]}/Dockerfile",
+                                                        "dockerfilePath" : "versions/${versions[i]}/${variant}/Dockerfile",
                                                         "from" : [
                                                                 "kind" : "ImageStreamTag",
                                                                 "name" : "%NAME%:${tag}"
